--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="body">
+<body class="body" style="margin-bottom: 10rem;">
     <header class="header">
         <div class="wrap header__wrap">
+            <a class="burger" href="#">
+                <div class="burger__line burger__line_top"></div>
+                <div class="burger__line burger__line_mid"></div>
+                <div class="burger__line burger__line_bot"></div>
+            </a>
             <a href="/" class="logo">
                 <div class="logo__img">
-                    <svg width="70" height="64" viewBox="0 0 70 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="70" height="64" viewbox="0 0 70 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M47.25 17.6H22.75C20.817 17.6 19.25 19.0327 19.25 20.8V43.2C19.25 44.9673 20.817 46.4 22.75 46.4H47.25C49.183 46.4 50.75 44.9673 50.75 43.2V20.8C50.75 19.0327 49.183 17.6 47.25 17.6Z"
                             stroke="#6C5CE7" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -42,56 +47,213 @@
     </header>
     <main class="main">
         <section class="main-block">
-            <div class="wrap">
-                <h1 class="main-block__title">Combine <b>fine</b> images To represent a product</h1>
-                <div class="portfolio">
+            <div class="wrap main-block__wrap">
+                <h1 class="main-block__title main-block_hide">Combine <b>fine</b> images To represent a product</h1>
+                <h1 class="main-block__title main-block_hide_hd">Combine <b>Cool</b> images</h1>
+                <p class="main-block_hide_hd main-block__subtitle">To create any grid by scaling and resizing</p>
+                <a href="#portfolio" class="main-block__arrow portfolio_hide_xs">
+                    <img src="img/arrow.svg" alt="стрелка вниз" class="main-block__arrow-icon">
+                </a>
+                <div class="portfolio" id="portfolio">
                     <div class="portfolio__more">
                         <div class="portfolio__more-info">
-                            <p class="text portfolio__text">Use mixed grid with imagery, replace with your own photos and descriptions</p>
+                            <p class="text portfolio__text portfolio_hide">Use mixed grid with imagery, replace with your own photos and descriptions
+                            </p>
                             <div class="portfolio__banner portfolio__banner-more">
-                                <p class="text portfolio__text-bold portfolio__banner-text">We aimed to deliver HQ
-                                    templates for Figma</p>
+                                <p class="text portfolio__text-bold portfolio__banner-text portfolio_hide">We aimed to deliver HQ templates for Figma</p>
+                                <p class="text portfolio__text-bold portfolio__banner-text portfolio_hide_hd">Lipstick for business</p>
                                 <p class="text text_small portfolio__banner-text">Used by 123 people</p>
                             </div>
+                            <div class="portfolio__banner porfolio__banner_small portfolio_hide_hd">
+                                <img src="img/banner1-mob-dop.jpg" alt="" class="portfolio__image">
+                                <p class="text portfolio__text-bold portfolio_hide_hd portfolio__text_bottom">Flowering</p>
+                            </div>
                         </div>
-                        <a href="#" class="button button_m">Learn more</a>
+                        <a href="#" class="button button_m portfolio_hide">Learn more</a>
                     </div>
                     <div class="portfolio__content">
                         <div class="portfolio__banner portfolio__banner_giant">
                             <img src="img/banner2.png" alt="" class="portfolio__image">
-                            <p class="title title_h3 portfolio__title">Consider it done!</p>
+                            <p class="title title_h3 portfolio__title portfolio_hide">Consider it done!</p>
+                            <p class="title title_h3 portfolio__title portfolio_hide_hd">No problems!</p>
                         </div>
-                    
-                    <div class="portfolio__wrap">
-                        <p class="text portfolio__banner-desc">This is multipurpose grid, it fits for portfolio, services or agency web site</p>
-                        <div class="portfolio__banner portfolio__banner_small">
-                            <img src="img/banner5.png" alt="" class="portfolio__image">
+                        <div class="portfolio__wrap">
+                            <p class="text portfolio__banner-desc portfolio_hide">This is multipurpose grid, it fits for portfolio, services or agency web
+                                site</p>
+                            <div class="portfolio__banner porfolio__banner_small">
+                                <img src="img/banner5.jpg" alt="" class="portfolio__image portfolio_hide">
+                                <img src="img/banner5-mob.jpg" alt="" class="portfolio__image portfolio_hide_hd">
+                                <p class="text portfolio__text-bold portfolio_hide_hd">Your wakeuper</p>
+                            </div>
+                            <div class="portfolio__banner porfolio__banner_small portfolio_hide">
+                                <img src="img/banner6.jpg" alt="" class="portfolio__image">
+                            </div>
                         </div>
-                        <div class="portfolio__banner portfolio__banner_small">
-                            <img src="img/banner6.jpg" alt="" class="portfolio__image">
+                        <div class="portfolio__mobile-wrap">
+                            <div class="portfolio__banner porfolio__banner_mid">
+                                <img src="img/banner3.jpg" alt="" class="portfolio__image portfolio_hide">
+                                <img src="img/banner3-mob.jpg" alt="" class="portfolio__image portfolio_hide_hd">
+                                <p class="text portfolio__text-bold portfolio_hide_hd portfolio__text_bottom portfolio__text_mid">Caption here</p>
+                            </div>
+                            <div class="portfolio__banner porfolio__banner_mid portfolio_hide_hd">
+                                <img src="img/banner3-mob-dop.jpg" alt="" class="portfolio__image portfolio_hide_hd">
+                                <p class="title title_h3 portfolio__text_bottom portfolio_hide_hd">The Process</p>
+                            </div>
                         </div>
-                    </div>
-                        <div class="portfolio__banner portfolio__banner_mid">
-                            <img src="img/banner3.png" alt="" class="portfolio__image">
+                        <div class="portfolio__mobile-wrap">
+                            <div class="portfolio__banner porfolio__banner_big">
+                                <img src="img/banner4.jpg" alt="" class="portfolio__image portfolio_hide">
+                                <img src="img/banner4-mob.jpg" alt="" class="portfolio__image portfolio_hide_hd">
+                                <p class="title title_h3 portfolio__title portfolio_hide">See my goal?</p>
+                                <p class="title title_h3 portfolio__title portfolio_hide_hd">You can set centered text</p>
+                            </div>
+                            <a href="#" class="button button_m portfolio__button portfolio_hide_hd">Learn more</a>
                         </div>
-                        <div class="portfolio__banner portfolio__banner_big">
-                            <img src="img/banner4.png" alt="" class="portfolio__image">
-                            <p class="title title_h3 portfolio__title">See my goal?</p>
-                        </div>
-                        <div class="portfolio__banner portfolio__banner_small">
+                        <div class="portfolio__banner porfolio__banner_small portfolio_hide">
                             <img src="img/banner7.jpg" alt="" class="portfolio__image">
                         </div>
-                    
+                    </div>
                 </div>
+            </div>
+        </section>
+        <!-- section.services>.wrap>h2.title_h3.services__title+p.text_big.services__main-text+div.services__card-wrap>(div.services__card>(div.services__icon-wrap>img.services__icon)+h3.title.services__subtitle+p.text.services__text+a.button.services__button)*4 -->
+        <section class="services">
+            <div class="wrap">
+                <h2 class="title_h4 services__title">Delivering good designs since 1954 🚚💨</h2>
+                <p class="text_big services__main-text">We’re the first multi-purpose design kit solutions for businesses. We help you bridge
+                    gaps between your layouts, templates and developers to empower all involved.</p>
+                <div class="services__card-wrap">
+                    <div class="services__card">
+                        <div class="services__icon-wrap services__icon-wrap_red"><img src="img/phone.svg" alt="" class="services__icon"></div>
+                        <h3 class="title services__subtitle">Support</h3>
+                        <p class="text services__text">Delivering faster and more personalized support with shared screens and cool design systems for Figma</p>
+                        <a href="" class="button services__button button_s button_transparent">Learn more</a>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__icon-wrap services__icon-wrap_blue"><img src="img/graphic.svg" alt="" class="services__icon"></div>
+                        <h3 class="title services__subtitle">Sales growth</h3>
+                        <p class="text services__text">Identify qualified customers with easy-to-use live chat messaging and AI-based Sales Bot</p>
+                        <a href="" class="button services__button button_s button_transparent">Learn more</a>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__icon-wrap services__icon-wrap_purple"><img src="img/flash.svg" alt="" class="services__icon"></div>
+                        <h3 class="title services__subtitle">Coponents-driven</h3>
+                        <p class="text services__text">Delivering faster and more personalized support with shared screens and cool design systems for Figma</p>
+                        <a href="" class="button services__button button_s button_transparent">Learn more</a>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__icon-wrap services__icon-wrap_green"><img src="img/like.svg" alt="" class="services__icon"></div>
+                        <h3 class="title services__subtitle">Swap the icon</h3>
+                        <p class="text services__text">You can toggle to any icon within Instances and customize outlined stroke to more bolder or lighter</p>
+                        <a href="" class="button services__button button_s button_transparent">Learn more</a>
+                    </div>
                 </div>
             </div>
         </section>
 
-
+        <section class="pricing">
+            <div class="wrap">
+                <h2 class="title_h2 pricing__main-title">Affordable pricing</h2>
+                <p class="title_h4 pricing__subtitle">
+                    Bill me 
+                    <a class="pricing__period pricing__period_choose" href="#">monthly</a>
+                     • 
+                    <a class="pricing__period" href="#">yearly</a>
+                </p>
+                <div class="pricing__cards">
+                    <div class="pricing__card">
+                        <h3 class="text pricing__title">Like a pussy</h3>
+                        <div class="pricing__price">
+                            <span class="pricing__price-num title_h3">Free</span>
+                            <span class="pricing__price-period minicaps"> / forever</span>
+                        </div>
+                        <ul class="pricing__features">
+                            <li class="pricing__feature text">Components-driven system</li>
+                            <li class="pricing__feature text">Sales-boosting landing pages</li>
+                            <li class="pricing__feature text">Awesome Feather icons pack</li>
+                        </ul>
+                        <a href="" class="button button_transparent pricing__button button_s">Try for free</a>
+                    </div>
+                    <div class="pricing__card">
+                        <h3 class="text pricing__title">👤 Individual</h3>
+                        <div class="pricing__price">
+                            <span class="pricing__price-num title_h3">$24</span>
+                            <span class="pricing__price-period minicaps"> / month</span>
+                        </div>
+                        <ul class="pricing__features">
+                            <li class="pricing__feature text">Components-driven system</li>
+                            <li class="pricing__feature text">Sales-boosting landing pages</li>
+                            <li class="pricing__feature text">Awesome Feather icons pack</li>
+                            <li class="pricing__feature text">Themed into 3 different styles</li>
+                            <li class="pricing__feature text">Will help to learn Figma</li>
+                        </ul>
+                        <a href="" class="button pricing__button">Regular license</a>
+                    </div>
+                    <div class="pricing__card">
+                        <h3 class="text pricing__title">👥 Corporate</h3>
+                        <div class="pricing__price">
+                            <span class="pricing__price-num title_h3">$12</span>
+                            <span class="pricing__price-period minicaps"> / editor</span>
+                        </div>
+                        <ul class="pricing__features">
+                            <li class="pricing__feature text">Components-driven system</li>
+                            <li class="pricing__feature text">Sales-boosting landing pages</li>
+                            <li class="pricing__feature text">Awesome Feather icons pack</li>
+                            <li class="pricing__feature text">Themed into 3 different styles</li>
+                        </ul>
+                        <a href="" class="button button_transparent pricing__button button_s">Extended license</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
-
-
+    <footer class="footer">
+        <div class="wrap footer__wrap">
+            <div class="footer__social">
+                <h4 class="footer__title">follow us</h4>
+                <nav class="social">
+                    <a href="#" class="social__link"><img src="img/facebook.svg" alt="" class="social__icon"></a>
+                    <a href="#" class="social__link"><img src="img/linkedin.svg" alt="" class="social__icon"></a>
+                    <a href="#" class="social__link"><img src="img/slack.svg" alt="" class="social__icon"></a>
+                    <a href="#" class="social__link"><img src="img/twitter.svg" alt="" class="social__icon"></a>
+                </nav>
+            </div>
+            <div class="footer__mail">
+                <h4 class="footer__title">follow us</h4>
+                <a href="mailTo:hello@fapsterapp.com" class="footer__mail-link">hello@fapsterapp.com</a>
+            </div>
+            <div class="footer__info">
+                <h4 class="footer__title">information</h4>
+                <div class="footer__info-wrap">
+                    <a href="#" class="footer__link">About Fapster app</a>
+                    <a href="#" class="footer__link">Onhovered / Active</a>
+                    <a href="#" class="footer__link">We are hiring!</a>
+                    <a href="#" class="footer__link">Get in Touch</a>
+                    <a href="#" class="footer__link">Privacy Policy</a>
+                    <a href="#" class="footer__link">Resources</a>
+                    <a href="#" class="footer__link">Things We Like</a>
+                    <a href="#" class="footer__link">Terms of Service</a>
+                </div>
+            </div>
+            <form action="https://jsonplaceholder.typicode.com/posts/" method="POST" class="footer__form">
+                <h4 class="footer__title footer__form-title">keep in touch</h4>
+                <input type="text" placeholder="Your name" name="name" class="footer__input">
+                <input type="email" placeholder="E-mail" name="email" class="footer__input">
+                <label class="footer__textarea-wrap">
+                    <textarea name="message" placeholder="Leave your message" class="footer__textarea"></textarea>
+                    <div class="footer__form-icon">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M28 22.66V28C28 28.5304 27.7893 29.0391 27.4142 29.4142C27.0391 29.7893 26.5304 30 26 30H12C11.4696 30 10.9609 29.7893 10.5858 29.4142C10.2107 29.0391 10 28.5304 10 28V14C10 13.4696 10.2107 12.9609 10.5858 12.5858C10.9609 12.2107 11.4696 12 12 12H17.34" stroke="#6C5CE7" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M26 10L30 14L20 24H16V20L26 10Z" stroke="#6C5CE7" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                </label>
+                <button class="footer__button">SEND</button>
+            </form>
+        </div>
+    </footer>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
